# turn-mcp

./: .dockerignore  .gitignore  .npmignore  .vscodeignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  README_EN.md  SKILL.md  SKILL.zh-CN.md  docker-compose.yml  esbuild.config.js  package-lock.json  package.json  start.bat  start.command  start.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish-python.yml
examples/python/: README.md  langchain_tool.py  langgraph_checkpoint.py  plain_asyncio.py
public/: app.js  i18n.js  index.html  manifest.json  styles.css  sw.js
python-client/: README.md  pyproject.toml
python-client/turn_mcp_client/: __init__.py  client.py
src/: auto-configure.ts  config.ts  event-log.ts  extension.ts  history-persistence.ts  mcp-server.ts  server-manager.ts  server-stdio.ts  server.ts  sse-manager.ts  turn-mcp-server.ts  wait-store.ts  webhook.ts  webview-provider.ts
tests/: ui-events-auth-visibility.test.js  ui-events-entry-prune-hint.test.js  ui-events-filter-interactions.test.js  ui-history-filter-interactions.test.js  ui-pagination-interactions.test.js  ui-smoke-runner-cli.test.js  ui-smoke-runner.js  ui-test-harness.js  wait-store.test.js
