[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turn-mcp-client"
version = "0.1.0"
description = "Python client for the turn-mcp-web human-in-the-loop server"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["mcp", "human-in-the-loop", "ai-agent", "turn-wait"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/anthropic/turn-mcp-web-universal"
Repository = "https://github.com/anthropic/turn-mcp-web-universal"

[tool.setuptools.packages.find]
where = ["."]
include = ["turn_mcp_client*"]
